samples/_failures_safe/1761514408_0e4c81_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e317ee04.c: In function ‘main’:
./samples/SAFE/__tmp_e317ee04.c:142:9: error: expected declaration or statement at end of input
  142 |         add_edge(&g, i, src, dest, weight);
      |         ^~~~~~~~
./samples/SAFE/__tmp_e317ee04.c:142:9: error: expected declaration or statement at end of input
